// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the CardWrapper component should accept a backgroundColor 1`] = `
<div
  className="CardWrapper-sc-4ons13-0 hnQunW ui-kit.card.CardWrapper"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept additional props 1`] = `
<div
  className="CardWrapper-sc-4ons13-0 ezXjXH ui-kit.card.CardWrapper"
  role="article listitem"
>
  Boom!
</div>
`;

exports[`the CardWrapper component should accept and render passed in styles 1`] = `
<div
  className="CardWrapper-sc-4ons13-0 ezXjXH ui-kit.card.CardWrapper"
  style={
    Object {
      "paddingTop": "56.25%",
      "width": "100%",
    }
  }
>
  Boom!
</div>
`;

exports[`the CardWrapper component should render 1`] = `
<div
  className="CardWrapper-sc-4ons13-0 ezXjXH ui-kit.card.CardWrapper"
>
  Boom!
</div>
`;
